--- a/package.json
+++ b/package.json
@@ -31,8 +31,13 @@
   "proxy": "http://localhost:7675/",
   "devDependencies": {
     "axios": "^0.19.0",
+    "es6-promise": "^4.2.8",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0"
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "sass-loader": "^8.0.0",
+    "whatwg-fetch": "^3.0.0"
   }
 }
